--- a/indexo.html
+++ b/indexo.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="thai.css">
+    <script src = "main.js" ></script>
+    <link rel = "stylesheet" href="index.css"> 
     <title>Document</title>
 </head>
 <body>
+    <div w3-include-html="header.html"></div>
     <br>
     <br>
     <br>
@@ -14,5 +17,8 @@
     <a href ="play.html"><input id = "next" type = "button" value = "เริ่มเล่น"></a>
 
 
+    <script>
+        includeHTML();
+    </script>
 </body>
 </html>
