--- a/header.html
+++ b/header.html
@@ -4,7 +4,13 @@
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
       <a href ="play.html"><input id = "next" type = "button" value = "เริ่มเล่น"></a>
-     
+    </div>
+  </li>
+
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Game</a>
+    <div class="dropdown-content">
+      <a href ="xo.html"><input id = "next" type = "button" value = "Start"></a>
     </div>
   </li>
 </ul>
