--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel = "stylesheet" href="index.css"> 
-  <link rel = "stylsheet" href="thai.css">
+  <link rel = "stylesheet" href="thai.css">
   <script src = "main.js" ></script>
 </head>
 <body>
