update xo game and overall

--- a/header.html
+++ b/header.html
@@ -1,14 +1,14 @@
 <ul>
   <li><a href="indexo.html">Home</a></li>
   <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+    <a href="javascript:void(0)" class="dropbtn">เกมคำราชาศัพท์</a>
     <div class="dropdown-content">
       <a href ="play.html"><input id = "next" type = "button" value = "เริ่มเล่น"></a>
     </div>
   </li>
 
   <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Game</a>
+    <a href="javascript:void(0)" class="dropbtn">XO Game</a>
     <div class="dropdown-content">
       <a href ="xo.html"><input id = "next" type = "button" value = "Start"></a>
     </div>
