--- a/indexo.html
+++ b/indexo.html
@@ -13,8 +13,10 @@
     <br>
     <br>
     <br>
-    <h1>เกมคำราชาศัพท์</h1><br>
-    <a href ="play.html"><input id = "next" type = "button" value = "เริ่มเล่น"></a>
+    <h1>Games</h1><br>
+    <a href ="play.html"><input id = "next" type = "button" value = "เกมคำราชาศัพท์"></a>
+    <br>
+    <a href ="xo.html"><input id = "next" type = "button" value = "XO Game"></a>
 
 
     <script>
