--- a/play.html
+++ b/play.html
@@ -31,6 +31,8 @@
     <br>
     <input class="inBox" type="button" id="replay" value="เริ่มเกมใหม่" onclick="replay();">
     <div>
+    <a href ="indexo.html"><input id = "next" type = "button" value = "Home"></a>
+    <a href ="xo.html"><input id = "next" type = "button" value = "XO Game"></a>
 
         <audio id="soundBad">
             <source src="soundClick.mp3" type="audio/mpeg">
