--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel = "stylesheet" href="index.css"> 
   <link rel = "stylesheet" href="thai.css">
+  <link rel = "stylesheet" href="xo.css">
   <script src = "main.js" ></script>
 </head>
 <body>
